# revenant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: design-blob-storage.md  design.md  multi-upstream-addendum.md
examples/: README.md
examples/blob_split_merge/: make_input.py  pipeline.py
examples/planner_worker/: make_input.py  pipeline.py
examples/wordcount/: make_input.py  pipeline.py
src/revenant/: blob_store.py  cli.py  config.py  io_utils.py  stage_runner.py  step.py  supervisor.py
tests/: test_blob_store.py  test_smoke.py
tests/examples/: test_blob_split_merge.py
