[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revenant"
version = "0.1.0"
description = "A crash-safe, resumable, file-based pipeline framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Andrew Reeves", email = "areeves42@gmail.com" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

# This is what makes `revenant` a runnable command after `pip install`.
[project.scripts]
revenant = "revenant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
